--- a/rc/.gemrc
+++ b/rc/.gemrc
@@ -1,2 +1,10 @@
-install: --no-document
-update: --no-document
+---
+:backtrace: false
+:bulk_threshold: 1000
+:sources:
+- https://rubygems.org/
+:update_sources: true
+:verbose: true
+gem: "--user-install"
+install: "--document=yri"
+update: "--no-document"
