change font of mintty

--- a/rc/.minttyrc
+++ b/rc/.minttyrc
@@ -20,7 +20,7 @@ BoldWhite=253,246,227
 BoldAsFont=no
 Transparency=low
 CursorType=block
-Font=Ricty Diminished
+Font=Cica
 FontHeight=14
 Locale=C
 Charset=UTF-8
