--- a/rc/.gitconfig
+++ b/rc/.gitconfig
@@ -7,7 +7,7 @@
   status = auto
   branch = auto
 [core]
-  editor = vim
+  editor = nvim
   excludesfile = ~/.gitignore_global
   autocrlf = input
   preloadindex = true
