Add refactored files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-/rc/.zsh/completions/*
+/dot/.zsh/completions/*
+!/dot/.zsh/completions/.gitkeep
+/dot/.config/karabiner/automatic_backups/
+/dot/.config/karabiner/assets/complex_modifications/*
+!/dot/.config/karabiner/assets/complex_modifications/mysettings.json
