Fix setting for true color

--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -40,8 +40,10 @@ setw -g aggressive-resize on
 # ステータスバーの位置を上にする
 set-option -g status-position top
 
-# 256色表示
+# enable true colors
+# ref. https://www.pandanoir.info/entry/2019/11/02/202146
 set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",$TERM:Tc"
 
 # マウス有効化
 set-option -g mouse on
