Rename title of a karabiner custom setting

--- a/dot/.config/karabiner/assets/complex_modifications/mysettings.json
+++ b/dot/.config/karabiner/assets/complex_modifications/mysettings.json
@@ -1,5 +1,5 @@
 {
-  "title": "left_command + hjkl -> arrow",
+  "title": "left_command combination",
   "rules": [
     {
       "description": "left_command + h -> left arrow",
