--- a/dot/.config/nvim/coc-settings.json
+++ b/dot/.config/nvim/coc-settings.json
@@ -22,6 +22,7 @@
           "--disable", "gomnd",
           "--disable", "lll",
           "--disable", "maligned",
+          "--disable", "nlreturn",
           "--disable", "wsl"
         ]
       }
