Update golangci-lint options

--- a/dot/.config/nvim/coc-settings.json
+++ b/dot/.config/nvim/coc-settings.json
@@ -18,6 +18,7 @@
           "run",
           "--out-format", "json",
           "--enable-all",
+          "--disable", "funlen",
           "--disable", "gochecknoglobals",
           "--disable", "gomnd",
           "--disable", "lll",
