--- a/dot/.config/nvim/coc-settings.json
+++ b/dot/.config/nvim/coc-settings.json
@@ -20,6 +20,7 @@
           "--enable-all",
           "--disable", "funlen",
           "--disable", "gochecknoglobals",
+          "--disable", "gochecknoinits",
           "--disable", "gomnd",
           "--disable", "lll",
           "--disable", "maligned",
