--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -12,7 +12,8 @@ set -sg escape-time 0
 
 # デフォルトシェルをzshに設定
 # set -g default-shell /bin/zsh
-set -g default-shell /usr/local/bin/zsh
+# set -g default-shell /usr/local/bin/zsh
+set -g default-shell /opt/homebrew/bin/zsh
 
 # リフレッシュ間隔を設定する
 # set -g status-interval 5
