--- a/dot/.config/starship.toml
+++ b/dot/.config/starship.toml
@@ -25,7 +25,7 @@ truncate_to_repo = false
 style = "blue"
 
 [directory.substitutions]
-"~/workspace/src/" = ""
+"~/ghq/src/" = ""
 
 [time]
 disabled = false
