Improve setup process

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /dot/.config/karabiner/automatic_backups/
 /dot/.config/karabiner/assets/complex_modifications/*
 !/dot/.config/karabiner/assets/complex_modifications/mysettings.json
+Brewfile.lock.json
