--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -68,6 +68,7 @@ cask "bettertouchtool"
 cask "biscuit"
 cask "discord"
 cask "docker"
+cask "font-cica"
 cask "google-chrome"
 cask "insomnia"
 cask "iterm2"
