--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,21 +1,22 @@
 tap "1password/tap"
 tap "aws/tap"
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-fonts"
-tap "homebrew/core"
-brew "asdf"
-brew "python@3.10"
+tap "homebrew/services"
 brew "awscli"
 brew "bash"
 brew "bash-completion"
+brew "node"
+brew "bash-language-server"
 brew "bat"
+brew "biome"
 brew "curl"
-brew "deno"
 brew "direnv"
-brew "dprint"
-brew "exa"
+brew "dockerfile-language-server"
+brew "eza"
 brew "fd"
+brew "gnutls"
+brew "ffmpeg"
 brew "fzf"
 brew "gawk"
 brew "gcc"
@@ -23,23 +24,24 @@ brew "gh"
 brew "ghq"
 brew "git"
 brew "git-delta"
-brew "glow"
 brew "gnu-sed"
 brew "gnu-time"
-brew "gnutls"
 brew "go"
 brew "golangci-lint"
+brew "gopls"
 brew "helm"
 brew "jq"
 brew "kind"
+brew "kubebuilder"
 brew "kubernetes-cli"
 brew "kustomize"
 brew "llvm"
 brew "lua"
+brew "lua-language-server"
 brew "make"
 brew "mas"
+brew "mise"
 brew "neovim"
-brew "node"
 brew "openssh"
 brew "perl"
 brew "pipx"
@@ -47,29 +49,40 @@ brew "poetry"
 brew "protobuf"
 brew "pstree"
 brew "python-yq"
+brew "redis"
 brew "ripgrep"
 brew "ruby"
+brew "ruff"
+brew "rust-analyzer"
 brew "sheldon"
 brew "starship"
+brew "stylua"
 brew "tealdeer"
+brew "terraform-ls"
 brew "tmux"
 brew "tree"
+brew "typescript-language-server"
+brew "vscode-langservers-extracted"
 brew "watch"
 brew "wget"
-brew "yarn"
+brew "yaml-language-server"
 brew "zsh"
-brew "aws/tap/aws-sam-cli"
 cask "1password"
 cask "1password-cli"
 cask "alt-tab"
 cask "appcleaner"
+cask "arc"
 cask "authy"
 cask "bettertouchtool"
 cask "biscuit"
+cask "chatgpt"
+cask "deepl"
 cask "discord"
 cask "docker"
 cask "font-cica"
+cask "font-udev-gothic-nf"
 cask "google-chrome"
+cask "inkdrop"
 cask "insomnia"
 cask "iterm2"
 cask "karabiner-elements"
@@ -77,15 +90,19 @@ cask "notion"
 cask "raycast"
 cask "spotify"
 cask "visual-studio-code"
+cask "vlc"
 cask "wireshark"
+mas "1Password for Safari", id: 1569813296
 mas "Amphetamine", id: 937984704
 mas "Battery Indicator", id: 1206020918
-mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
+mas "Logic Pro", id: 634148309
 mas "Magnet", id: 441258766
-mas "Meeter", id: 1510445899
+mas "Motion", id: 434290957
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "RunCat", id: 1429033973
 mas "Slack", id: 803453959
+mas "The Unarchiver", id: 425424353
+mas "Xcode", id: 497799835
