--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,6 +3,9 @@ tap "aws/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/services"
+tap "ladicle/kubectl-bindrole"
+tap "unblee/tap"
+brew "openssl@3"
 brew "awscli"
 brew "bash"
 brew "bash-completion"
@@ -10,6 +13,7 @@ brew "node"
 brew "bash-language-server"
 brew "bat"
 brew "biome"
+brew "csview"
 brew "curl"
 brew "direnv"
 brew "dockerfile-language-server"
@@ -17,6 +21,7 @@ brew "eza"
 brew "fd"
 brew "gnutls"
 brew "ffmpeg"
+brew "findutils"
 brew "fzf"
 brew "gawk"
 brew "gcc"
@@ -31,9 +36,11 @@ brew "golangci-lint"
 brew "gopls"
 brew "helm"
 brew "jq"
+brew "k6"
 brew "kind"
-brew "kubebuilder"
 brew "kubernetes-cli"
+brew "krew"
+brew "kubebuilder"
 brew "kustomize"
 brew "llvm"
 brew "lua"
@@ -43,9 +50,11 @@ brew "mas"
 brew "mise"
 brew "neovim"
 brew "openssh"
+brew "parallel"
 brew "perl"
 brew "pipx"
 brew "poetry"
+brew "postgresql@14"
 brew "protobuf"
 brew "pstree"
 brew "python-yq"
@@ -67,6 +76,9 @@ brew "watch"
 brew "wget"
 brew "yaml-language-server"
 brew "zsh"
+brew "aws/tap/eks-node-viewer"
+brew "ladicle/kubectl-bindrole/kubectl-rolesum"
+brew "unblee/tap/kubectl-cls"
 cask "1password"
 cask "1password-cli"
 cask "alt-tab"
@@ -79,15 +91,18 @@ cask "chatgpt"
 cask "deepl"
 cask "discord"
 cask "docker"
+cask "firefox"
 cask "font-cica"
 cask "font-udev-gothic-nf"
 cask "google-chrome"
+cask "google-cloud-sdk"
 cask "inkdrop"
 cask "insomnia"
 cask "iterm2"
 cask "karabiner-elements"
 cask "notion"
 cask "raycast"
+cask "skitch"
 cask "spotify"
 cask "visual-studio-code"
 cask "vlc"
@@ -105,4 +120,3 @@ mas "Pages", id: 409201541
 mas "RunCat", id: 1429033973
 mas "Slack", id: 803453959
 mas "The Unarchiver", id: 425424353
-mas "Xcode", id: 497799835
