--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,6 +5,7 @@ tap "homebrew/cask-fonts"
 tap "homebrew/services"
 tap "ladicle/kubectl-bindrole"
 tap "unblee/tap"
+brew "actionlint"
 brew "openssl@3"
 brew "awscli"
 brew "bash"
