--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
-/dot/.zsh/completions/*
-!/dot/.zsh/completions/.gitkeep
-/dot/.config/karabiner/automatic_backups/
-/dot/.config/karabiner/assets/complex_modifications/*
 !/dot/.config/karabiner/assets/complex_modifications/mysettings.json
+!/dot/.zsh/completions/.gitkeep
+/dot/.config/karabiner/assets/complex_modifications/*
+/dot/.config/karabiner/automatic_backups/
+/dot/.config/gcloud/
+/dot/.config/gh/
+/dot/.config/github-copilot/
+/dot/.config/iterm2/
+/dot/.config/raycast/
+/dot/.zsh/completions/*
 Brewfile.lock.json
 lazy-lock.json
